grid/03-grid-layout-3/style.css
* {
  margin: 0;
  padding: 0;
}
ul, li {
  list-style: none;
}

.container {
  text-align: center;
  display: grid;
  grid-template-columns: 1fr 4fr;
  gap: 15px;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  background-color: #393f4d;
  grid-column: 1 / 3;
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.logo {
  justify-self: start;
}

.menu {
  align-self: center;
}
.menu ul{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}
.menu ul,
.menu li {
  font-size: 16px;  
}

.sidebar {
  background-color: #C50208;
  grid-row: 2 / 4;
  display: grid;
  row-gap: 40px;
  column-gap: 5px;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.nav {
  background-color: #C50208;
}

.nav ul {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}
.nav ul li {
  font-size: 16px;
  text-transform: uppercase;
}

.article {
  background-color: #bccbde;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 15px;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
  height: 200px;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
  padding: 5px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
  grid-column: 1 / 3;
}

.footer p {
  font-size: 13px;
  font-weight: normal;
}

